# ai-assistant

./: .gitignore  ARCHITECTURE.md  CANONICAL_TRACKING.md  DESIGN.md  FINAL_CHECK.md  KNOWN_ISSUES.md  LOOKHERE.md  NEXT_STEPS.md  NOTES.md  PERSONA_CONTRACT.md  PM_MEMORY.md  PRINCIPLES.md  PRODUCT_RUNTIME_SPEC.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  RELEASE_READINESS.md  STABILITY.md  WORKLOG.md  build_backend.py  doctor.sh  dynamic_context_degradation_spec.md  install.sh  llm_broker_policy.json  llm_registry.json  model_watch_config.json  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py  uninstall.sh  ystemctl --user show personal-agent-api.service --property=Environment --no-pager -l \
agent/: __init__.py  action_gate.py  anchors.py  api_server.py  assistant_planner.py  assistant_ux.py  audit_log.py  bot.py  capability_policy.py  changed_report.py  chat_response_serializer.py  cli.py  compare_mode.py  config.py  confirmation_transactions.py  confirmations.py  control_plane.py  conversation_memory.py  daily_brief.py  diagnostics.py  disk_diff.py  disk_grow.py  doctor.py  error_kind.py  error_response_ux.py  executor_registry.py  failure_ux.py  fallback_ladder.py  golden_path.py  host_lifecycle.py  identity.py  intent_router.py  internal_writer_authority.py  knowledge_cache.py  language_consistency.py  llm_client.py  llm_router.py  logging_bootstrap.py  logging_utils.py  memory_authority.py  (+54 more)
control/: ASSISTANT_INTERACTION_HARDENING.md  DEVELOPMENT_TASKS.md  KIMI_FINDINGS.md  master_plan.md
debian/: changelog  control  rules
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: HANDOFF_GOOD_ASSISTANT_FOUNDATION.md  assistant_viability.md  control_plane.md  telegram_setup.md
infra/: .env  personal-agent.service
logs/: agent.jsonl
memory/: agent.db  db.py  schema.sql
ops/: __init__.py  agent.env.example  env_templates.py  install.sh  ops_config.json  supervisor.env.example  supervisor.py
packaging/: example.env  personal-agent.desktop  personal-agent@.service
scripts/: active_host_enablement_smoke.py  architecture_safety_audit_v2.py  assistant_interaction_barrage.py  assistant_personality_memory_smoke.py  assistant_real_world_smoke.py  assistant_viability_smoke.py  backup_restore_proof.py  backup_v1_smoke.py  bootstrap_clean_verification.sh  brief_smoke.py  browser_ui_survival_smoke.py  build_deb.sh  build_dist.py  build_release_bundle.sh  build_webui.sh  bypass_behavior_smoke.py  capability_policy_audit.py  capability_policy_smoke.py  chat_eval.py  clean_checkout_debian_package_smoke.py  clean_checkout_reproducibility_smoke.py  cleanup_execution_smoke.py  cleanup_preview_smoke.py  daily_driver_smoke.py  (+96 more)
(+664 files in other folders)
