[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "personal-agent"
dynamic = ["version"]
description = "Local-first AI assistant with grounded runtime truth and bounded native actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-telegram-bot>=22.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<10",
]
release = [
  "build>=1.2,<2",
]
dev = [
  "pytest>=8.0,<10",
  "build>=1.2,<2",
]

[project.scripts]
personal-agent = "agent.cli:main"
personal-agent-api = "agent.api_server:main"
personal-agent-control = "agent.control_plane:main"
personal-agent-telegram = "telegram_adapter.bot:run"

[tool.personal_agent_build]
source_packages = ["agent", "telegram_adapter", "memory", "skills"]
sdist_include = [
  "agent",
  "telegram_adapter",
  "memory",
  "skills",
  "tests",
  "systemd",
  "scripts/build_dist.py",
  "docs/releases",
  "README.md",
  "VERSION",
  "requirements.txt",
  "pyproject.toml",
  "build_backend.py",
]
wheel_data_files = [
  ["systemd/personal-agent-api.service", "share/personal-agent/systemd/personal-agent-api.service"],
  ["docs/operator/INTERNAL_WRITER_REGISTRY_V1.json", "share/personal-agent/INTERNAL_WRITER_REGISTRY_V1.json"],
]
