[package]
name = "personal-agent-desktop"
version = "0.1.0"
description = "Personal Agent Desktop"
authors = ["Personal Agent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
